# Fudan-Math-Grade-Computing

./: .gitignore  .python-version  README.md  main.ipynb  main.py  pyproject.toml
.github/workflows/: build-amd-release.yml
