[project]
name = "grades-calculation"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bump-my-version>=1.2.1",
    "jupyter>=1.1.1",
    "nuitka>=2.7.13",
    "polars>=1.32.3",
]
[tool.bumpversion]
current_version = "1.0.1" 
commit = true 
tag = true
push = true
[tool.bumpversion.file_patterns]
"pyproject.toml" = [
    'version = "{current_version}"',
]