[project]
name = "grades-calculation"
version = "1.1.2"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bump-my-version>=1.2.1",
    "jupyter>=1.1.1",
    "nuitka>=2.7.13",
    "polars>=1.32.3",
]
[tool.bumpversion]
current_version = "1.1.2"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
moveable_tags = []
commit_args = ""
setup_hooks = []
pre_commit_hooks = []
post_commit_hooks = []